# Image_processing_projects

./: CMakeLists.txt  README.md
task1/: main.cpp  main2.cpp  plot.py
task2/: readply.cpp  readply.h  task2.cpp
task3/: task3.cpp  visualize.py
